# deepset_model

./: .gitignore  README.md  pyproject.toml
baseline_deepsets/: README.md  __init__.py  config.py  data.py  evaluate.py  heatmap.py  metrics.py  model.py  report_plots.py  train.py
generate_events/: __init__.py  gen_sim_events.py  params.py
