[project]
name = "baseline-deepsets"
version = "0.1.0"
description = "Standalone baseline DeepSets model for heatmap source localization with synthetic event generation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "torch>=2.10.0",
]
